--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<section class="banner">
 		<div class="container">
 			<div class="b-center">
-				<img src="img/Web/banner.jpg" alt="">
+				<img src="img/web/banner.jpg" alt="">
 				<h2>Hallo...<br>
 					Saya Adalah Seorang <span class="efek-ngetik"></span></h2>
 				<P>Selamat datang di website portfolio saya!</P>
@@ -47,9 +47,10 @@
 	<section class="about">
 		<div class="container">
 			<h3>About</h3>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Corporis veniam voluptatem provident quibusdam recusandae. Corrupti sapiente ullam magnam, illo corporis dolore quia culpa ipsa fugiat, consectetur alias nobis, porro autem.</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae impedit iure explicabo nemo possimus vero optio nesciunt molestiae reprehenderit eos tempora libero id, repudiandae ut quo voluptate iusto accusantium.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, non sed at, nam neque assumenda quos maiores sint numquam reiciendis laudantium et quasi cumque atque animi rerum eum omnis esse.</p>
+			<p>Assalamualaikum wr.wb</p>
+			<p>Nama saya Desi Murtya,biasanya akrab dipanggil Desi. Saya lahir di Bandung pada tanggal 14 Mei 2004, Saya adalah salah satu siswi dari sekolah SMK Muthia Harapan Cicalengka,Hobi saya adalah menggambar dan melukis, Saya anak pertama dari tiga bersaudara. Ayah saya bernama Dede Muhtar dan ibu saya bernama Sri Wahyuna.Ayah saya adalah seorang Wiraswasta dan Ibu saya adalah seorang ibu rumah tangga.</p>
+            <p>Pada umur 5 tahun saya memulai pendidikan di RA An-Najaah yang berada di Kec.Cicalengka Kab.Bandung, kemudian saya melanjutkan pendidikan di SDN Beor 2 dan selesai pada tahun ajaran 2015/2016. Kemudian setelah lulus saya melanjutkan pendidikan di Mts.Ibnu Jabal di tahun 2016,Di MTs saya aktif dalam organisasi OSIS dan Pramuka Selepas lulus di tahun 2019, saya melanjutkan pendidikan di SMK Muthia Harapan Cicalengka.</p>
+            <p>Ketika menginjak kelas X di SMK Muthia Harapan Cicalengka saya bergabung  dengan organisasi Pramuka dan juga aktif di berbagai kegiatan dan perlombaan dalam ekstrakurikuler Pramuka. Selain itu saya juga bergabung dalam Saka Bhayangkara di Polsek Cicalengka. Dan saat ini saya masih duduk di kelas XII SMK jurusan Rekayasa Perangkat Lunak(RPL).</p>
 		</div>
 	</section>
 
@@ -78,50 +79,50 @@
 			<h3>Portfolio</h3>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto1.jpg" alt="">
-					<span>Karya 1</span>
+					<img src="img/web/foto1.jpg" alt="">
+					<span>Foto 1</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto2.jpg" alt="">
-					<span>Karya 2</span>
+					<img src="img/web/foto2.jpg" alt="">
+					<span>Foto 2</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto3.jpg" alt="">
-					<span>Karya 3</span>
+					<img src="img/web/foto3.jpg" alt="">
+					<span>Foto 3</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto4" alt="">
-					<span>Karya 4</span> 
+					<img src="img/web/foto4" alt="">
+					<span>Foto 4</span> 
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto5.jpg" alt="">
-					<span>Karya 5</span>
+					<img src="img/web/foto5.jpg" alt="">
+					<span>Foto 5</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto6" alt="">
-					<span>Karya 6</span>
+					<img src="img/web/foto6" alt="">
+					<span>Foto 6</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto7.jpg" alt="">
-					<span>Karya 7</span>
+					<img src="img/web/foto7.jpg" alt="">
+					<span>Foto 7</span>8
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/Web/foto8.jpg" alt="">
-					<span>Karya 8</span>
+					<img src="img/web/foto8.jpg" alt="">
+					<span>Foto 8</span>
 				</a>
 			</div>
 		</div>
