--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 	<section class="banner">
 		<div class="container">
 			<div class="b-center">
-				<img src="img/web/banner.jpg" alt="">
+				<img src="img/Web/banner.jpg" alt="">
 				<h2>Hallo...<br>
 					Saya Adalah Seorang <span class="efek-ngetik"></span></h2>
-				<P>Selamat datang di website portfolio saya!</P>
+				<P>Selamat datang di Website portfolio saya!</P>
 			</div>
 		</div>
 	</section>
@@ -50,7 +50,7 @@
 			<p>Assalamualaikum wr.wb</p>
 			<p>Nama saya Desi Murtya,biasanya akrab dipanggil Desi. Saya lahir di Bandung pada tanggal 14 Mei 2004, Saya adalah salah satu siswi dari sekolah SMK Muthia Harapan Cicalengka,Hobi saya adalah menggambar dan melukis, Saya anak pertama dari tiga bersaudara. Ayah saya bernama Dede Muhtar dan ibu saya bernama Sri Wahyuna.Ayah saya adalah seorang Wiraswasta dan Ibu saya adalah seorang ibu rumah tangga.</p>
             <p>Pada umur 5 tahun saya memulai pendidikan di RA An-Najaah yang berada di Kec.Cicalengka Kab.Bandung, kemudian saya melanjutkan pendidikan di SDN Beor 2 dan selesai pada tahun ajaran 2015/2016. Kemudian setelah lulus saya melanjutkan pendidikan di Mts.Ibnu Jabal di tahun 2016,Di MTs saya aktif dalam organisasi OSIS dan Pramuka Selepas lulus di tahun 2019, saya melanjutkan pendidikan di SMK Muthia Harapan Cicalengka.</p>
-            <p>Ketika menginjak kelas X di SMK Muthia Harapan Cicalengka saya bergabung  dengan organisasi Pramuka dan juga aktif di berbagai kegiatan dan perlombaan dalam ekstrakurikuler Pramuka. Selain itu saya juga bergabung dalam Saka Bhayangkara di Polsek Cicalengka. Dan saat ini saya masih duduk di kelas XII SMK jurusan Rekayasa Perangkat Lunak(RPL).</p>
+            <p>Ketika menginjak kelas X di SMK Muthia Harapan Cicalengka saya bergabung  dengan organisasi Pramuka dan juga aktif di berbagai kegiatan dan perlombaan dalam ekstrakurikuler Pramuka. Selain itu saya juga pernah bergabung dalam Saka Bhayangkara di Polsek Cicalengka. Dan saat ini saya masih duduk di kelas XII SMK jurusan Rekayasa Perangkat Lunak(RPL).</p>
 		</div>
 	</section>
 
@@ -79,49 +79,49 @@
 			<h3>Portfolio</h3>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto1.jpg" alt="">
+					<img src="img/Web/foto1.jpg" alt="">
 					<span>Foto 1</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto2.jpg" alt="">
+					<img src="img/Web/foto2.jpg" alt="">
 					<span>Foto 2</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto3.jpg" alt="">
+					<img src="img/Web/foto3.jpg" alt="">
 					<span>Foto 3</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto4" alt="">
+					<img src="img/Web/foto4" alt="">
 					<span>Foto 4</span> 
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto5.jpg" alt="">
+					<img src="img/Web/foto5.jpg" alt="">
 					<span>Foto 5</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto6" alt="">
+					<img src="img/Web/foto6" alt="">
 					<span>Foto 6</span>
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto7.jpg" alt="">
+					<img src="img/Web/foto7.jpg" alt="">
 					<span>Foto 7</span>8
 				</a>
 			</div>
 			<div class="col-4">
 				<a href="">
-					<img src="img/web/foto8.jpg" alt="">
+					<img src="img/Web/foto8.jpg" alt="">
 					<span>Foto 8</span>
 				</a>
 			</div>
