--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="col-4">
 				<a href="">
 					<img src="img/web/foto7.jpg" alt="">
-					<span>Foto 7</span>8
+					<span>Foto 7</span>
 				</a>
 			</div>
 			<div class="col-4">
